# aip

./: Cargo.toml  Dockerfile
migrations/postgres/: 014_drop_app_passwords_did_unique.sql
migrations/sqlite/: 026_drop_app_passwords_did_unique.sql
src/: errors.rs
src/http/: context.rs  handler_app_password.rs  handler_app_password_login.rs  handler_atprotocol_oauth_authorize.rs  handler_oauth.rs  handler_par.rs  handler_well_known.rs  handler_xrpc_ready.rs  mod.rs  server.rs  utils_error.rs  utils_oauth.rs
src/oauth/: atprotocol_bridge.rs  auth_server.rs  openid.rs  types.rs
src/oauth/clients/: registration.rs
src/storage/: key_provider.rs  mod.rs  traits.rs
src/storage/inmemory/: oauth.rs
src/storage/postgres/: authorization_codes.rs  did_documents.rs  mod.rs  refresh_tokens.rs
src/storage/sqlite/: authorization_codes.rs  mod.rs  refresh_tokens.rs
templates/: login.html  login_app_password.html
