[package]
name = "aip"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[[bin]]
name = "aip"
path = "src/bin/aip.rs"

[[bin]]
name = "aip-client-management"
path = "src/bin/aip-client-management.rs"

[lib]
name = "aip"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8" }

atproto-identity = { git = "https://tangled.org/@smokesignal.events/atproto-identity-rs", features = ["lru", "zeroize", "hickory-dns"] }
atproto-oauth = { git = "https://tangled.org/@smokesignal.events/atproto-identity-rs", features = ["lru", "zeroize", "hickory-dns"] }
atproto-oauth-axum = { git = "https://tangled.org/@smokesignal.events/atproto-identity-rs", features = ["zeroize"] }
atproto-client = { git = "https://tangled.org/@smokesignal.events/atproto-identity-rs" }
atproto-xrpcs = { git = "https://tangled.org/@smokesignal.events/atproto-identity-rs", features = ["hickory-dns"] }

axum-template = { version = "3.0", features = ["minijinja"] }
minijinja = { version = "2.7", features = ["builtins"] }
minijinja-autoreload = { version = "2.7", optional = true }
minijinja-embed = { version = "2.7", optional = true }
rust-embed = { version = "8.5", optional = true }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "chrono", "json"], optional = true }
redis = { version = "0.27", optional = true }
deadpool = { version = "0.12", optional = true }
deadpool-redis = { version = "0.18", optional = true }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.41", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "system-proxy", "json", "rustls-tls"] }
async-trait = "0.1"
http = "1.0"

# OAuth 2.1 dependencies
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
ulid = { version = "1.1", features = ["serde"] }
url = "2.5"
sha2 = "0.10"
rand = "0.8"
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
metrohash = "1.0.7"
crockford = "1.2.1"
duration-str = "0.11"

[dev-dependencies]
axum-test = "15"
futures = "0.3"

[build-dependencies]
minijinja-embed = {version = "2.7", optional = true}

[features]
default = ["reload", "redis", "postgres"]
embed = ["dep:minijinja-embed", "dep:rust-embed"]
reload = ["dep:minijinja-autoreload", "minijinja/loader", "axum-template/minijinja-autoreload"]
sqlite = ["dep:sqlx", "sqlx/sqlite"]
postgres = ["dep:sqlx", "sqlx/postgres"]
redis = ["dep:redis", "dep:deadpool", "dep:deadpool-redis"]
